--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
 		}
 	],
 	"require": {
-        "php": ">=5.6.4",
-        "wp-kit/registry": "dev-master"
+        "php": ">=5.6.4"
     },
 	"type": "library",
 	"autoload": {
