Added WP Vendor Publish CLI

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 	"type": "library",
 	"autoload": {
         "files": [
-            "helpers.php"
+            "helpers.php",
+            "commands/*.php"
         ]
     }
 }
