--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 	"autoload": {
         "files": [
             "helpers.php",
-            "commands/wp-cli-themosis-vendor-publish.php.php"
+            "commands/wp-cli-themosis-vendor-publish.php"
         ]
     }
 }
