--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	"require": {
         "php": ">=5.6.4",
         "illuminate/support": "5.*",
-		"peterhegman/wp-laravel-dd": "dev-master"
+		"wp-kit/dd": "1.*"
     },
 	"type": "library",
 	"autoload": {
