--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
 	"require": {
         "php": ">=5.6.4",
         "illuminate/support": "5.*",
-		"wp-kit/dd": "1.*"
+		"wp-kit/dump": "1.*"
     },
 	"type": "library",
 	"autoload": {
