--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,8 @@
 		"preferred-install": "dist"
 	},
 	"require": {
-        "php": ">=5.6.4",
-        "illuminate/support": "5.5.*",
-		"symfony/var-dumper": "3.4.*"
+        "php": ">=7.2",
+        "illuminate/support": "^6.0"
     },
 	"type": "library",
 	"autoload": {
