--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 		"preferred-install": "dist"
 	},
 	"require": {
-        "php": ">=7.2",
+        "php": "^7.4",
         "illuminate/support": "^6.0"
     },
 	"type": "library",
